--- a/css/base.css
+++ b/css/base.css
@@ -1,8 +1,19 @@
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .container {
+    width: 1100px;
+    margin: 0 auto;
+  }
+  
 ul {
     list-style-type: none;
 }
 
 a {
+    display: inline;
     text-decoration: none;
 }
 
