--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,16 +1,35 @@
-.header__logo {
-    position: absolute;
-    width: 137px;
-    height: 58px;
-    left: 405px;
-    top: 57px;
+  .header {
+  position: absolute;
+  padding-top: 57px;
+  width: 100%;
+}
+
+.header__row {
+  display: flex;
+  justify-content: space-between;
 }
 .nav__menu {
-    font-family: 'Roboto', sans-serif;
-    margin-left: 900px;
-    margin-top: 79px;
-    font-weight: 400;
+  display: flex;
 }
 .nav__item {
-    margin-left: 48px;
+  list-style: none;
+  margin-left: 42px;
+}
+.nav__link {
+  text-decoration: none;
+  color: black;
+  transition: 0.3s;
+}
+
+.nav__link:hover {
+  color: var(--color-blue);
+}
+
+.nav__link {
+  font-style: 400;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.1em;
+
 }
