--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,45 +1,45 @@
 .hero {
-    position: relative;
-    width: 100vw;
-    height: 790px;
-    background-color: #EEEFF1;
-    z-index: -1;
-    top: -157px;
-}
-.hero__title {
-    font-family: 'Roboto';
+    min-height: 100vh;
+    background-color: var(--color-lightGray);
+  }
+  .hero__row {
+    display: flex;
+    justify-content: center;
+    padding-top: 257px;
+  }
+  .hero__bg {
+    max-height: 233px;
+  }
+  .hero__item {
+    margin-left: 130px;
+    max-width: 540px;
+  }
+  .hero__title {
+    margin: 0;
     font-style: normal;
     font-weight: 500;
     font-size: 48px;
-    line-height: 79px;
-    padding-left: 1070px;
     color: #000000;
-    padding-top: 257px;
-}
-.hero__text {
-    font-family: 'Roboto';
+  }
+  .hero__description {
+    margin: 30px 0 30px 0;
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    padding-left: 1070px;
-    color: #727272;
-}
-.btn__blue {
-    position: absolute;
-    width: 225px;
-    height: 65px;
-    left: 1137px;
-    top: 500px;
-    background: #34547A;
-}
-.hero__btn {
-    font-family: 'Roboto';
+    color: var(--color-gray);
+  }
+  
+  .hero__btn {
+    display: inline-block;
+    padding: 25px 40px 25px 40px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 16px;
-    line-height: 59px;
     text-align: center;
     letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
+    color: #fff;
+    background-color: var(--color-blue);
+    text-decoration: none;
+  }
+  
